--- a/README.bn.adoc
+++ b/README.bn.adoc
@@ -37,12 +37,6 @@ https://www.omicronlab.com/avro-keyboard.html[অভ্র কীবোর্ড
 image:https://github.com/OpenBangla/OpenBangla-Keyboard/workflows/CI/badge.svg[CI, link=https://github.com/OpenBangla/OpenBangla-Keyboard/actions?query=workflow%3ACI+branch%3Amaster] {nbsp}
 image:https://img.shields.io/github/downloads/OpenBangla/OpenBangla-Keyboard/total.svg?label=GitHub%20Downloads[Github Downloads, link=https://img.shields.io/github/downloads/OpenBangla/OpenBangla-Keyboard/total.svg?label=GitHub%20Downloads] {nbsp}
 
-CAUTION: প্রজেক্টটি ভাল লাগলে অনুগ্রহ করে গিটহাব 🌟 দিয়ে উৎসাহিত করুন!
-
-🚧 🚧 *চলমান উন্নয়ন কর্মকাণ্ড https://github.com/OpenBangla/OpenBangla-Keyboard/tree/develop[`develop`] ব্রাঞ্চে হয়ে থাকে।* 🚧 🚧
-
-toc::[]
-
 
 == ফিচারসমূহ
 * অভ্র কিবোর্ডের মত _টপ বার_, কনফিগারেশন হাতের কাছেই।
@@ -66,53 +60,8 @@ toc::[]
 
 == ইনস্টল পদ্ধতি
 
-IMPORTANT: ওপেনবাংলা কিবোর্ড ১.৫.১ অথবা পূর্ববর্তী সংস্করণ ইনস্টল করা থাকলে https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Uninstalling-OpenBangla-Keyboard[সেটি প্রথমে আনইনস্টল করে নিন।]
+* মূলত এই রিপোজিটরির মাধ্যমে fcitx5 এর সাথে ব্যবহারের জন্যে ওপেনবাংলা কিবোর্ড সহজে ইন্সটল করতে পারবেন। এই রিপোজিটরি মূল ডেভেলপারের নয় বা এটি ওপেনবাংলা কিবোর্ডের কোন ফর্ক নয়। এটি শুধুমাত্র ওপেনবাংলা কিবোর্ডের ডেভেলপ ব্রাঞ্চের কপি এবং এতে fcitx5 এর অপশানটি এডিট করা হয়েছে যাতে সহজে ইন্সটল এবং ব্যবহার করা যায়। 
 
-আপনার টার্মিনাল ওপেন করুন এবং এই কমান্ডটি রান করুন আপনার bash শেলে। বিঃদ্রঃ শেলটি **BASH** হতে হতে হবে, তাছাড়া স্ক্রিপ্টটি কাজ করবে না।
-```bash
-bash -c "$(wget -q https://raw.githubusercontent.com/OpenBangla/OpenBangla-Keyboard/master/tools/install.sh -O -)"
-```
-
-যদি এতে আপনার কাজ না হয় তাহলে দয়া করে একটি https://github.com/OpenBangla/OpenBangla-Keyboard/issues[ইস্যু] তৈরি করুন। এমতাবস্থায় https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Installing-OpenBangla-Keyboard[উইকি] থেকে ডিস্ট্রো-ভেদে ইন্সটল নির্দেশাবলী দেখে নিতে পারেন।
-
-=== আর্চলিনাক্স ভিত্তিক ডিস্ট্রো
-TIP: আর্চ লিনাক্সে ওপেনবাংলা কীবোর্ড ইনস্টল করার বিষয়ে একটি ভিডিও টিউটোরিয়াল রয়েছে। আপনি এটি https://youtu.be/C8vnR1AY6sA[এখান] থেকে দেখতে পারেন।
-
-Arch User Repository(AUR) তে ওপেনবাংলা কিবোর্ডের দুটো প্যাকেজ রয়েছে। `openbangla-keyboard` ব্যবহার করুন যদি আপনি সোর্স থেকে প্যাকেজটি তৈরি এবং ইন্সটল করতে চান। অথবা `openbangla-keyboard-bin` ব্যবহার করুন যদি আপনি বাইনারি প্যাকেজটি ব্যবহার করতে চান যেটি আর্চলিনাক্স ভিত্তিক ডিস্ট্রো গুলোর জন্য প্যাকেজটির মেইন্টেইনার তৈরি করেছেন। আপনি আপনার পছন্দের AUR হেল্পার ব্যবহার করে একটি কম্যান্ডের মাধ্যমেই ইন্সটল করতে পারবেন। কিছু জনপ্রিয় টুলের উদাহরণ:
-
-==== `openbangla-keyboard`
-* `$ pacaur -S openbangla-keyboard`
-* `$ yay -S openbangla-keyboard`
-* `$ yaourt -S openbangla-keyboard`
-
-==== `openbangla-keyboard-bin`
-* `$ pacaur -S openbangla-keyboard-bin`
-* `$ yay -S openbangla-keyboard-bin`
-* `$ yaourt -S openbangla-keyboard-bin`
-
-অথবা ম্যানুয়ালি ইন্সটল করুন:
-```bash
-sudo pacman -S base-devel git
-git clone https://aur.archlinux.org/openbangla-keyboard.git
-cd openbangla-keyboard
-makepkg -risc
-```
-আর্চলিনাক্স এর জন্য আমরা `.pkg.tar.zst` প্যাকেজও বিতরণ করে থাকি, যেটা আপনি https://github.com/OpenBangla/OpenBangla-Keyboard/releases[রিলিজেস] পেইজ থেকে ডাউনলোড করে ইন্সটল করতে পারবেন আপনার সিস্টেমে নিম্নলিখিত কমান্ডটি রান করে:
-```bash
-$ sudo pacman -U package.pkg.tar.zst
-```
-
-=== অন্যান্য
-এছাড়া আমাদের https://github.com/OpenBangla/OpenBangla-Keyboard/releases[রিলিজ] পাতা থেকে উপযুক্ত প্যাকেজ ডাউনলোড করেও ইনস্টল করতে পারেন।
-
-=== শেষ ধাপ
-ওপেনবাংলা কিবোর্ড ইনস্টলের পর আপনার https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Configuring-Environment[ডেস্কটপ এনভায়রনমেন্ট কনফিগার] করার প্রয়োজন হতে পারে।
-
-এই প্রক্রিয়া কাজ না করলে দয়া করে একটি https://github.com/OpenBangla/OpenBangla-Keyboard/issues[গিটহাব ইস্যু] তৈরি করুন।
-
-
-== কমিউনিটি
-https://github.com/OpenBangla/OpenBangla-Keyboard/discussions[গিটহাব ডিসকাসন্স] এবং https://www.facebook.com/openbanglakeyboard[ফেসবুকে] আমাদের সাথে আলাপ করতে পারেন।
 
 == কম্পাইল
 
@@ -129,41 +78,35 @@ https://github.com/OpenBangla/OpenBangla-Keyboard/discussions[গিটহাব
 === উবুন্টু এবং ডেবিয়ান ভিত্তিক
 উবুন্টু/ডেবিয়ান ভিত্তিক সিস্টেমে ডিপেন্ডেসিগুলো ইনস্টলের কমান্ড:
 ```bash
-sudo apt-get install build-essential rustc cargo cmake libibus-1.0-dev qtbase5-dev qtbase5-dev-tools libzstd-dev
+sudo apt install build-essential rustc cargo cmake libibus-1.0-dev qtbase5-dev qtbase5-dev-tools libzstd-dev fcitx5 fcitx5-config-qt git
 ```
 
-=== ফেদোরা
+=== ফেডোরা
 ফেদোরাতে ডিপেন্ডেসিগুলো ইনস্টলের কমান্ড:
 ```bash
-sudo dnf install @buildsys-build rust cargo cmake qt5-qtdeclarative-devel ibus-devel libzstd-devel
+sudo dnf install @buildsys-build rust cargo cmake qt5-qtdeclarative-devel ibus-devel libzstd-devel fcitx5 fcitx5-devel fcitx5-configtool git
 ```
 
 === আর্চলিনাক্স ভিত্তিক
 আর্চলিনাক্স ভিত্তিক সিস্টেমে ডিপেন্ডেসিগুলো ইনস্টলের কমান্ড:
 ```bash
-sudo pacman -S base-devel rust cmake qt5-base libibus zstd
+sudo pacman -S base-devel rust cmake qt5-base libibus zstd fcit5 fcitx5-configtool git
 ```
 
 === ওপেনসুস ভিত্তিক
 ওপেনসুস ভিত্তিক সিস্টেমে ডিপেন্ডেন্সিগুলো ইন্সটলের কমান্ড:
 ```bash
-sudo zypper install libQt5Core-devel libQt5Widgets-devel libQt5Network-devel libzstd-devel libzstd1 cmake make ninja rust ibus-devel ibus clang gcc patterns-devel-base-devel_basis
+sudo zypper install libQt5Core-devel libQt5Widgets-devel libQt5Network-devel libzstd-devel libzstd1 cmake make ninja rust ibus-devel ibus clang gcc patterns-devel-base-devel_basis fcitx5-devel fcitx5 fcitx5-configtool git
 ```
 
-=== সোলাস
-সোলাস ভিত্তিক সিস্টেমে ডিপেন্ডেন্সিগুলো ইন্সটলের কমান্ড:
-```bash
-sudo eopkg install -c system.devel rust qt5-base-devel ibus-devel zstd-devel git cargo
-```
-
-=== শেষ ধাপ
+=== পরবর্তী ধাপঃ
 বিল্ড ডিপেন্ডেন্সিগুলো ইনস্টলের পর ওপেনবাংলা কিবোর্ডের সোর্স কোড রিপজিটরিটি ক্লোন করুন এবং ক্লোন করা ডিরেক্টরিতে প্রবেশ করুন:
 ```bash
-git clone --recursive https://github.com/OpenBangla/OpenBangla-Keyboard.git
+git clone --recursive https://github.com/asifakonjee/openBangla-fcitx5.git
 cd OpenBangla-Keyboard
 ```
 
-এরপর বিল্ড কমান্ডগুলো চালান:
+এরপর বিল্ড কমান্ডগুলো চালানঃ
 ```bash
 mkdir build && cd build
 cmake ..
@@ -171,17 +114,5 @@ make
 sudo make install
 ```
 
-
-== ঋণস্বীকার
- * মেহেদী হাসান খান, অভ্র কিবোর্ডের ডেভলপের জন্য।
- * রীফাত নবী, অভ্র ফোনেটিক জাভাস্ক্রিপ্টে স্থানান্তর করার জন্য।
- * https://github.com/sarim[সারিম খান], আইবাস-অভ্র ডেভলপের জন্য।
- * https://github.com/saaiful[সাইফুল ইসলাম], আইকনের জন্য।
- * https://material.io/resources/icons[Material Design Icons].
- * https://github.com/alex-spataru/QSimpleUpdater[QSimpleUpdater], হালনাগাদকরণ লাইব্রেরির জন্য।
-
-
-== লাইসেন্স
-এই প্রজেক্টটি https://opensource.org/licenses/GPL-3.0[জিপিএল ৩] লাইসেন্সের অধীন।
-
-https://github.com/mominul[মোহাম্মদ মোমিনুল হক] এবং https://github.com/OpenBangla/OpenBangla-Keyboard/graphs/contributors[✨ অবদানকারীদের ✨] {nbsp} ❤️ {nbsp} দিয়ে তৈরি!
+=== শেষ ধাপঃ
+ওপেনবাংলা কিবোর্ড ইনস্টলের পর আপনার https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Configuring-Environment[ডেস্কটপ এনভায়রনমেন্ট কনফিগার] করার প্রয়োজন হতে পারে।
