--- a/README.adoc
+++ b/README.adoc
@@ -15,9 +15,6 @@ endif::[]
 :toc:
 :toc-placement!:
 
-++++
-<p align=right>(<a href="README.adoc"><b>Read in English</b></a>)</p>
-++++
 
 //HTML for formating the logo
 
@@ -60,7 +57,7 @@ image:https://img.shields.io/github/downloads/OpenBangla/OpenBangla-Keyboard/tot
 
 == ইনস্টল পদ্ধতি
 
-* মূলত এই রিপোজিটরির মাধ্যমে fcitx5 এর সাথে ব্যবহারের জন্যে ওপেনবাংলা কিবোর্ড সহজে ইন্সটল করতে পারবেন। এই রিপোজিটরি মূল ডেভেলপারের নয় বা এটি ওপেনবাংলা কিবোর্ডের কোন ফর্ক নয়। এটি শুধুমাত্র ওপেনবাংলা কিবোর্ডের ডেভেলপ ব্রাঞ্চের কপি এবং এতে fcitx5 এর অপশানটি এডিট করা হয়েছে যাতে সহজে ইন্সটল এবং ব্যবহার করা যায়। 
+মূলত এই রিপোজিটরিটির দ্বারা fcitx5 এর সাথে ব্যবহারের জন্যে ওপেনবাংলা কিবোর্ড সহজে ইন্সটল করতে পারবেন। এই রিপোজিটরি মূল ডেভেলপারের নয় বা এটি ওপেনবাংলা কিবোর্ডের কোন ফর্ক নয়। এটি শুধুমাত্র ওপেনবাংলা কিবোর্ডের ডেভেলপ ব্রাঞ্চের কপি এবং এতে fcitx5 এর জন্যে অপশানটি এডিট করা হয়েছে যাতে সহজে ইন্সটল এবং ব্যবহার করা যায়। 
 
 
 == কম্পাইল
@@ -102,8 +99,8 @@ sudo zypper install libQt5Core-devel libQt5Widgets-devel libQt5Network-devel lib
 === পরবর্তী ধাপঃ
 বিল্ড ডিপেন্ডেন্সিগুলো ইনস্টলের পর ওপেনবাংলা কিবোর্ডের সোর্স কোড রিপজিটরিটি ক্লোন করুন এবং ক্লোন করা ডিরেক্টরিতে প্রবেশ করুন:
 ```bash
-git clone --recursive https://github.com/asifakonjee/openBangla-fcitx5.git
-cd OpenBangla-Keyboard
+git clone --recursive https://github.com/asifakonjee/openbangla-fcitx5.git
+cd openbangla-fcitx5
 ```
 
 এরপর বিল্ড কমান্ডগুলো চালানঃ
