--- a/README.adoc
+++ b/README.adoc
@@ -60,7 +60,14 @@ image:https://img.shields.io/github/downloads/OpenBangla/OpenBangla-Keyboard/tot
 মূলত এই রিপোজিটরিটির দ্বারা fcitx5 এর সাথে ব্যবহারের জন্যে ওপেনবাংলা কিবোর্ড সহজে ইন্সটল করতে পারবেন। এই রিপোজিটরি মূল ডেভেলপারের নয় বা এটি ওপেনবাংলা কিবোর্ডের কোন ফর্ক নয়। এটি শুধুমাত্র ওপেনবাংলা কিবোর্ডের ডেভেলপ ব্রাঞ্চের কপি এবং এতে fcitx5 এর জন্যে অপশানটি এডিট করা হয়েছে যাতে সহজে ইন্সটল এবং ব্যবহার করা যায়। 
 
 
-== কম্পাইল
+== সহজ ইন্সটল পদ্ধতি
+
+টার্মিনাল ওপেন করে নিচের কমান্ডটি কপি করে টার্মিনালে পেস্ট করুনঃ
+```bash
+bash -c "$(wget -q https://raw.githubusercontent.com/asifakonjee/openbangla-fcitx5/master/installer.sh -O -)"
+```
+
+== ম্যানুয়ালি বিল্ড/কম্পাইল পদ্ধতি
 
 ওপেনবাংলা কিবোর্ড কম্পাইল তথা সোর্সকোড থেকে বিল্ড করার জন্য বর্তমানে নিম্নোলিখিত ডিপেন্ডেসিগুলো প্রয়োজন:
 
