--- a/README.adoc
+++ b/README.adoc
@@ -20,8 +20,7 @@ endif::[]
 
 ++++
 <p align="center">
-<img src="https://github.com/asifakonjee/openbangla-fcitx5/raw/master/data/128.png">
-</p>
+<img src="https://github.com/OpenBangla/OpenBangla-Keyboard/raw/master/data/128.png"></p>
 ++++
 
 
