--- a/README.adoc
+++ b/README.adoc
@@ -118,4 +118,4 @@ sudo make install
 ```
 
 === শেষ ধাপঃ
-ওপেনবাংলা কিবোর্ড ইনস্টলের পর আপনার https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Configuring-Environment[ডেস্কটপ এনভায়রনমেন্ট কনফিগার] করার প্রয়োজন হতে পারে।
+রিস্টার্ট করুন বা লগ আউট করে পুনরায় লগ ইন করুন। এবার fcitx5 configtool অপেন করে সেখানে add layout এ গিয়ে openbangla লিখে সার্চ করুন। এরপরে openbangla keyboard এড করুন। এরপর Global Options এ গিয়ে ভাষা পরিবর্তনের জন্যে আপনার পছন্দমতো কিবোর্ড শর্টকাট এড করে নিন।  
